--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/aslamanver/abvalidate/master/abValidate.css">
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
@@ -76,7 +77,7 @@
                 </div>
                 <div class="col-md-7">
                     <div>
-                        <h1 class="mt-4" >About <span class="text-light">the Restaurant</span></h1>
+                        <h1 >About <span class="text-light">the Restaurant</span></h1>
                         <span class="fs-5">
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo alias unde quia eaque assumenda.
                             Perspiciatis quaerat id harum inventore expedita tempora! Vel placeat nostrum assumenda, 
@@ -255,7 +256,7 @@
     <section id="contact-us">
         <div class="container">
             <div class="row">
-                <h1 class="section-title text-center" >Contact <span id="us" >us</span></h1>
+                <h1 class="section-title text-center mt-3" >Contact <span id="us" >us</span></h1>
             </div>
             <div class="row ">
                 <div class="col-md-7">
@@ -279,7 +280,7 @@
                         <button type="submit" class="btn fw-bold mb-4">Submit</button>
                     </form>
                 </div>
-                <div class="col-md-5">
+                <div class="col-md-5 p-5">
                     <div class="row">
                         <div>
                             <h1 class="fs-2">
@@ -318,6 +319,7 @@
 <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>    <script src="./js/jquery.mask.min.js"></script>
+<script type="text/javascript" src="https://raw.githubusercontent.com/aslamanver/abvalidate/master/abValidate.min.js"></script>
 <script src="./js/jquery.validate.min.js"></script>
 <script src="./js/messages_pt_BR.min.js"></script>
 <script src="./js/main.js"></script>   
