--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
                     <img class="imagem-carousel" src="./imagens/pessoas.jpg" alt="">
                 </div>
             </div>
-                <button data-bs-target="#carousel" data-bs-slide="prev" class="carousel-control-prev" type="button">
+                <button data-bs-target="#carousel" data-bs-slide="prev" class="carousel-control-prev w-25" type="button">
                     <span class="carousel-control-prev-icon"></span>
                 </button>
-                <button data-bs-target="#carousel" data-bs-slide="next" class="carousel-control-next" type="button">
+                <button data-bs-target="#carousel" data-bs-slide="next" class="carousel-control-next w-25" type="button">
                     <span class="carousel-control-next-icon"></span>
                 </button>
             <div class="carousel-indicators">
@@ -73,7 +73,7 @@
         <div class="container pt-4 pb-1 mt-4 mb-5 rounded " id="about-us">
             <div class="row">
                 <div class="col-md-5">
-                    <img class="w-100 rounded" src="./imagens/350z.jpg" alt="">
+                    <img class="w-100 rounded mb-4" src="./imagens/350z.jpg" alt="">
                 </div>
                 <div class="col-md-7">
                     <div>
@@ -85,7 +85,7 @@
                         </span>
                     </div>
                 <div>
-                    <h1 class="mt-4" >About <span class="text-light">the Space</span></h1>
+                    <h1 class="mt-0" >About <span class="text-light">the Space</span></h1>
                     <span class="fs-5">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo alias unde quia eaque assumenda.
                         Perspiciatis quaerat id harum inventore expedita tempora! Vel placeat nostrum assumenda, 
@@ -103,25 +103,25 @@
         <div class="container">
                 <h1 class="text-center">For all <span id="occasions">occasions</span> </h1>
             <div class="row mt-4">
-                <div class="col-md-4"> 
+                <div class="col-md-4 mt-3 mb-2"> 
                     <img class="w-100 rounded" src="./imagens/350z.jpg" alt="">
-                    <h1 class="align-content-center mt-3 mb-3" id="cards-title">birthdays</h1>
+                    <h1 class="align-content-center  mt-3" id="cards-title">birthdays</h1>
                     <span class="fs-5">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo alias unde quia eaque assumenda.
                         Perspiciatis quaerat id harum inventore expedita tempora! Vel placeat nostrum assumenda, 
                         saepe maiores iure soluta in.
                     </span>
                 </div>
-                <div class="col-md-4"> 
+                <div class="col-md-4 mt-3 mb-2"> 
                     <img class="w-100 rounded" src="./imagens/350z.jpg" alt="">
                     <h1 class="align-content-center mt-3 mb-3" id="cards-title" >wedding reception</h1>
-                    <span class="fs-5">
+                    <span class="fs-5 ">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo alias unde quia eaque assumenda.
                         Perspiciatis quaerat id harum inventore expedita tempora! Vel placeat nostrum assumenda, 
                         saepe maiores iure soluta in.
                     </span>
                 </div>
-                <div class="col-md-4"> 
+                <div class="col-md-4 mt-3 mb-2"> 
                     <img class="w-100 rounded" src="./imagens/350z.jpg" alt="">
                     <h1 class="align-content-center mt-3 mb-3" id="cards-title" >frat ernization</h1>
                     <span class="fs-5">
