--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         </nav>
     </div>    
     </header>
+     <p class="illustrative-text">illustrative images</p>
     <section >
         <div id="carousel" class="carousel slide mt-4 " data-bs-ride="carousel">
             <div class="carousel-inner">
