--- a/index.html
+++ b/index.html
@@ -154,27 +154,27 @@
                     <div class="tab-content">
                         <div class="tab-pane active" id="alcoholic">
                             <div class="row">
-                                <div class="col-6 col-sm-6 col-md-4 col-lg-3">
+                                <div class="col-6 col-sm-6 col-md-4 col-lg-3 mt-3 mb-3">
                                     <img class="d-block w-100 h-75" id="alcohol-drinks" src="./imagens/bebidas-alcoólcisa/chopp.jpg" alt="">
                                     <h1 class="align-content-center mt-3 mb-3" >example</h1>
                                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
                                 </div>
-                                <div class="col-6 col-sm-6 col-md-4 col-lg-3">
+                                <div class="col-6 col-sm-6 col-md-4 col-lg-3 mt-3 mb-3">
                                     <img class="d-block w-100 h-75" id="alcohol-drinks" src="./imagens/bebidas-alcoólcisa/chopp.jpg"alt="">
                                     <h1 class="align-content-center mt-3 mb-3">example</h1>
                                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
                                 </div>
-                                <div class="col-6 col-sm-6 col-md-4 col-lg-3">
+                                <div class="col-6 col-sm-6 col-md-4 col-lg-3 mt-3 mb-3">
                                     <img class="d-block w-100 h-75" id="alcohol-drinks" src="./imagens/bebidas-alcoólcisa/chopp.jpg" alt="">
                                     <h1 class="align-content-center mt-3 mb-3">example</h1>
                                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
                                 </div>
-                                <div class="col-6 col-sm-6 col-md-4 col-lg-3">
+                                <div class="col-6 col-sm-6 col-md-4 col-lg-3 mt-3 mb-3">
                                     <img class="d-block w-100 h-75" id="alcohol-drinks" src="./imagens/bebidas-alcoólcisa/chopp.jpg" alt="">
                                     <h1 class="align-content-center mt-3 mb-3">example</h1>
                                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
                                 </div>
-                                <div class="col-6 col-sm-6 col-md-4 col-lg-3">
+                                <div class="col-6 col-sm-6 col-md-4 col-lg-3 mt-3 mb-3">
                                     <img class="d-block w-100 h-75" id="alcohol-drinks" src="./imagens/bebidas-alcoólcisa/chopp.jpg"alt="">
                                     <h1 class="align-content-center mt-3 mb-3">example</h1>
                                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
@@ -183,12 +183,12 @@
                         </div>
                         <div class="tab-pane" id="non-alcohol">
                             <div class="row">
-                                <div class="col-6 col-sm-6 col-md-4 col-lg-3">
+                                <div class="col-6 col-sm-6 col-md-4 col-lg-3 mt-3 mb-3">
                                     <img class="d-block w-100 h-75" id="coquinha" src="./imagens/coquinha/coca.png" alt="">
                                     <h1 class="align-content-center mt-3 mb-3" >example</h1>
                                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
                                 </div>
-                                <div class="col-6 col-sm-6 col-md-4 col-lg-3">
+                                <div class="col-6 col-sm-6 col-md-4 col-lg-3 mt-3 mb-3">
                                     <img class="d-block w-100 h-75" id="coquinha" src="./imagens/coquinha/coca.png"alt="">
                                     <h1 class="align-content-center mt-3 mb-3">example</h1>
                                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
@@ -198,22 +198,22 @@
                         </div>
                         <div class="tab-pane" id="starters">
                             <div class="row">
-                                <div class="col-6 col-sm-6 col-md-4 col-lg-3 mt-3">
+                                <div class="col-6 col-sm-6 col-md-4 col-lg-3 mt-3 mb-3 ">
                                     <img class="d-block w-100 h-75" id="starters" src="./imagens/comida-boa/Ruela-Parmegiana.jpg" alt="">
                                     <h1 class="align-content-center mt-3 mb-3" >example</h1>
                                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
                                 </div>
-                                <div class="col-6 col-sm-6 col-md-4 col-lg-3 mt-3">
+                                <div class="col-6 col-sm-6 col-md-4 col-lg-3 mt-3 mb-3 ">
                                     <img class="d-block w-100 h-75" id="starters" src="./imagens/comida-boa/Ruela-Parmegiana.jpg"alt="">
                                     <h1 class="align-content-center mt-3 mb-3">example</h1>
                                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
                                 </div>
-                                <div class="col-6 col-sm-6 col-md-4 col-lg-3 mt-3">
+                                <div class="col-6 col-sm-6 col-md-4 col-lg-3 mt-3 mb-3 ">
                                     <img class="d-block w-100 h-75" id="starters" src="./imagens/comida-boa/Ruela-Parmegiana.jpg"alt="">
                                     <h1 class="align-content-center mt-3 mb-3">example</h1>
                                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
                                 </div>
-                                <div class="col-6 col-sm-6 col-md-4 col-lg-3 mt-3">
+                                <div class="col-6 col-sm-6 col-md-4 col-lg-3 mt-3 mb-3 ">
                                     <img class="d-block w-100 h-75" id="starters" src="./imagens/comida-boa/Ruela-Parmegiana.jpg"alt="">
                                     <h1 class="align-content-center mt-3 mb-3">example</h1>
                                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
@@ -222,12 +222,12 @@
                         </div>
                         <div class="tab-pane" id="main-courses">
                             <div class="row">
-                                <div class="col-6 col-sm-6 col-md-4 col-lg-3">
+                                <div class="col-6 col-sm-6 col-md-4 col-lg-3 mt-3 mb-3">
                                     <img class="d-block w-100 h-75" id="main" src="./imagens/carne/images.jpeg" alt="">
                                     <h1 class="align-content-center mt-3 mb-3" >example</h1>
                                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
                                 </div>
-                                <div class="col-6 col-sm-6 col-md-4 col-lg-3">
+                                <div class="col-6 col-sm-6 col-md-4 col-lg-3 mt-3 mb-3">
                                     <img class="d-block w-100 h-75" id="main" src="./imagens/carne/images.jpeg"alt="">
                                     <h1 class="align-content-center mt-3 mb-3">example</h1>
                                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
@@ -237,12 +237,12 @@
                         </div>
                         <div class="tab-pane" id="desserts">
                             <div class="row">
-                                <div class="col-6 col-sm-6 col-md-4 col-lg-3">
+                                <div class="col-6 col-sm-6 col-md-4 col-lg-3 mt-3 mb-3">
                                     <img class="d-block w-100 h-75" id="desserts-img" src="./imagens/desserts/dessert.-gallery-1" alt="">
                                     <h1 class="align-content-center mt-3 mb-3" >example</h1>
                                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
                                 </div>
-                                <div class="col-6 col-sm-6 col-md-4 col-lg-3">
+                                <div class="col-6 col-sm-6 col-md-4 col-lg-3 mt-3 mb-3">
                                     <img class="d-block w-100 h-75" id="desserts-img" src="./imagens/desserts/dessert.-gallery-1"alt="">
                                     <h1 class="align-content-center mt-3 mb-3">example</h1>
                                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
