--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="https://raw.githubusercontent.com/aslamanver/abvalidate/master/abValidate.css">
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
@@ -263,19 +262,19 @@
                 <div class="col-md-7">
                     <form>
                         <div class="mb-3">
-                            <label for="name" class="form-label fw-bold" id="label-contact">Your name:</label>
+                            <label for="name" class="form-label fw-bold" >Your name:</label>
                             <input id="name" type="text" class="form-control" required placeholder="Your name:">
                         </div>
                         <div class="mb-3">
-                            <label for="email" class="form-label fw-bold" id="label-contact">Your email:</label>
+                            <label for="email" class="form-label fw-bold" >Your email:</label>
                             <input id="email" type="text" class="form-control" required placeholder="Email@example.com">
                         </div>
                         <div class="mb-3">
-                            <label for="tel" class="form-label fw-bold" id="label-contact">Your telephone:(opcional)</label>
+                            <label for="tel" class="form-label fw-bold" >Your telephone:(opcional)</label>
                             <input id="tel" type="text" class="form-control" required >
                         </div>
                         <div class="mb-3">
-                            <label for="text" class="form-label fw-bold" id="label-contact">Your message:</label>
+                            <label for="text" class="form-label fw-bold" >Your message:</label>
                             <textarea  class="form-control " id="message" required placeholder="Add message or sugestion"></textarea>
                         </div>
                         <button type="submit" class="btn fw-bold mb-4">Submit</button>
@@ -322,7 +321,6 @@
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>    <script src="./js/jquery.mask.min.js"></script>
 <script type="text/javascript" src="https://raw.githubusercontent.com/aslamanver/abvalidate/master/abValidate.min.js"></script>
 <script src="./js/jquery.validate.min.js"></script>
-<script src="./js/messages_pt_BR.min.js"></script>
 <script src="./js/main.js"></script>   
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
